--- a/index.html
+++ b/index.html
@@ -4,69 +4,77 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Pbackup : Back up your PBase photos to local disk">
+    <meta name="description" content="PBackup : Back up photos from pbase to local disk">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Pbackup</title>
+    <title>PBackup</title>
   </head>
 
   <body>
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/florian-gh/pbackup">View on GitHub</a>
-
-          <h1 id="project_title">Pbackup</h1>
-          <h2 id="project_tagline">Back up your PBase photos to local disk</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/florian-gh/pbackup/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/florian-gh/pbackup/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+      <header class="inner">
+        <h1 id="project_title">PBackup</h1>
+        <h2 id="project_tagline">Back up photos from pbase to local disk</h2>
+        <section id="downloads">
+          <a class="setup_download_link" href="https://github.com/florian-gh/pbackup/releases/download/1.0/pbackup_setup_1.0.exe">Windows setup program</a>
+          <a class="exe_download_link" href="https://github.com/florian-gh/pbackup/releases/download/1.0/pbackup.exe">Windows standalone executable</a>
+        </section>
+      </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-PBackup" class="anchor" href="#welcome-to-PBackup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to PBackup.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>PBackup is a backup program for PBase photos. The owner of a PBase account can back up the original
+  version of his photos as stored in PBase, including their title, description etc.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>Here are some of the features:</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<ul>
+<li>The user can choose which galleries to back up.</li>
+<li>On the first run, all photos are backed up. Next runs back up newly added photos.
+ It is possible to request that all photos are checked for changes and backed up if necessary.</li>
+<li>Settings persist from an execution to the other.</li>
+<li>Photos are stored in a directory tree similar to the gallery tree.
+  The information attached to photos (title, description etc.) is stored as a file in the gallery directory (a JSON file).</li>
+<li>The program tries to be nice to PBase servers, downloading only what is necessary
+  to back up, and doing so one photo at a time.</li>
+</ul>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+      </section>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+      <section id="download" class="inner">
+        <h3>Downloads</h3>
+        <p>Current version: PBackup 1.0</p>
+        <table>
+          <tr>
+            <td><a href="https://github.com/florian-gh/pbackup/releases/download/1.0/pbackup_setup_1.0.exe">pbackup_setup_1.0.exe</a></td>
+            <td>Windows installer</td>
+          <tr>
+          <tr>
+            <td><a href="https://github.com/florian-gh/pbackup/releases/download/1.0/pbackup.exe">pbackup.exe</a></td>
+            <td>Windows standalone executable</td>
+          <tr>
+        </table>
+        <p>Linux and Mac OS versions will come soon...</p>
       </section>
     </div>
+
+
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Pbackup maintained by <a href="https://github.com/florian-gh">florian-gh</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">PBackup is maintained by <a href="https://github.com/florian-gh">florian-gh</a></p>
       </footer>
     </div>
 
-    
 
   </body>
 </html>
