Added link to issues

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="PBackup : Back up photos from pbase to local disk">
+    <meta name="description" content="PBackup : Back up your photos from pbase to local disk">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
       <header class="inner">
         <h1 id="project_title">PBackup</h1>
-        <h2 id="project_tagline">Back up photos from pbase to local disk</h2>
+        <h2 id="project_tagline">Back up your photos from pbase to local disk</h2>
         <section id="downloads">
           <a class="setup_download_link" href="https://github.com/florian-gh/pbackup/releases/download/1.0/pbackup_setup_1.0.exe">Windows setup program</a>
           <a class="exe_download_link" href="https://github.com/florian-gh/pbackup/releases/download/1.0/pbackup.exe">Windows standalone executable</a>
@@ -46,6 +46,10 @@
 <li>The program tries to be nice to PBase servers, downloading only what is necessary
   to back up, and doing so one photo at a time.</li>
 </ul>
+
+
+<p>For any issues, bug reports, enhancement requests, please
+  create a new issue here: <a href="https://github.com/florian-gh/pbackup/issues">https://github.com/florian-gh/pbackup/issues</a></p>
 
       </section>
 
