Added sha1 signature for binaries

--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
           <tr>
             <td><a href="https://github.com/florian-gh/pbackup/releases/download/1.0/pbackup_setup_1.0.exe">pbackup_setup_1.0.exe</a></td>
             <td>Windows installer</td>
+            <td>sha1: 20702570a33c67c5f0812e4d483e28e38eb57b3c</td>
           <tr>
           <tr>
             <td><a href="https://github.com/florian-gh/pbackup/releases/download/1.0/pbackup.exe">pbackup.exe</a></td>
             <td>Windows standalone executable</td>
+            <td>sha1: bf2ecd59b912a8b5f3a1c1e15140b524303fc0f7</td>
           <tr>
         </table>
         <p>Linux and Mac OS versions will come soon...</p>
