Add link to discussion forum

--- a/index.html
+++ b/index.html
@@ -70,9 +70,26 @@
         </table>
         <p>Linux and Mac OS versions will come soon...</p>
       </section>
+
+      <section id='discussion' class='inner'>
+        <p>Please join the discussion group: <a href='https://groups.google.com/forum/#!forum/pbackup'>https://groups.google.com/forum/#!forum/pbackup</a></p>
+
+        <iframe id="forum_embed"
+         src="javascript:void(0)"
+         scrolling="no"
+         frameborder="0"
+         width="640"
+         height="400">
+        </iframe>
+
+        <script type="text/javascript">
+         document.getElementById("forum_embed").src =
+          "https://groups.google.com/forum/embed/?place=forum/pbackup" +
+          "&showsearch=true&showpopout=true&parenturl=" +
+          encodeURIComponent(window.location.href);
+        </script>
+      </section>
     </div>
-
-
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
