Add header for discussion group

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
       </section>
 
       <section id='discussion' class='inner'>
+        <h3>Discussion group</h3>
+
         <p>Please join the discussion group: <a href='https://groups.google.com/forum/#!forum/pbackup'>https://groups.google.com/forum/#!forum/pbackup</a></p>
 
         <iframe id="forum_embed"
