--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h1 id="project_title">PBackup</h1>
         <h2 id="project_tagline">Back up your photos from pbase to local disk</h2>
         <section id="downloads">
-          <a class="setup_download_link" href="https://github.com/florian-gh/pbackup/releases/download/1.0/pbackup_setup_1.0.exe">Windows setup program</a>
-          <a class="exe_download_link" href="https://github.com/florian-gh/pbackup/releases/download/1.0/pbackup.exe">Windows standalone executable</a>
+          <a class="setup_download_link" href="https://github.com/flo-x/pbackup/releases/download/1.0/pbackup_setup_1.0.exe">Windows setup program</a>
+          <a class="exe_download_link" href="https://github.com/flo-x/pbackup/releases/download/1.0/pbackup.exe">Windows standalone executable</a>
         </section>
       </header>
     </div>
@@ -49,7 +49,7 @@
 
 
 <p>For any issues, bug reports, enhancement requests, please
-  create a new issue here: <a href="https://github.com/florian-gh/pbackup/issues">https://github.com/florian-gh/pbackup/issues</a></p>
+  create a new issue here: <a href="https://github.com/flo-x/pbackup/issues">https://github.com/flo-x/pbackup/issues</a></p>
 
       </section>
 
@@ -58,12 +58,12 @@
         <p>Current version: PBackup 1.0</p>
         <table>
           <tr>
-            <td><a href="https://github.com/florian-gh/pbackup/releases/download/1.0/pbackup_setup_1.0.exe">pbackup_setup_1.0.exe</a></td>
+            <td><a href="https://github.com/flo-x/pbackup/releases/download/1.0/pbackup_setup_1.0.exe">pbackup_setup_1.0.exe</a></td>
             <td>Windows installer</td>
             <td>sha1: 20702570a33c67c5f0812e4d483e28e38eb57b3c</td>
           <tr>
           <tr>
-            <td><a href="https://github.com/florian-gh/pbackup/releases/download/1.0/pbackup.exe">pbackup.exe</a></td>
+            <td><a href="https://github.com/flo-x/pbackup/releases/download/1.0/pbackup.exe">pbackup.exe</a></td>
             <td>Windows standalone executable</td>
             <td>sha1: bf2ecd59b912a8b5f3a1c1e15140b524303fc0f7</td>
           <tr>
@@ -96,7 +96,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">PBackup is maintained by <a href="https://github.com/florian-gh">florian-gh</a></p>
+        <p class="copyright">PBackup is maintained by <a href="https://github.com/flo-x">flo-x</a></p>
       </footer>
     </div>
 
